--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "sat-solver": "^1.0.1"
+    "sat-solver": "^1.0.1",
+    "z3-solver": "^4.12.1"
   }
 }
